nav, div, header &section overflows fixed. projects section start

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,25 +2,27 @@
   box-sizing: border-box;
 }
 
-body{
-    width: 100vw;
-    overflow-x: hidden;
-    background-image: url("../assets/img/bg_body_phones.png");
+body {
+  width: 100vw;
+  overflow-x: hidden;
+  background-image: url("../assets/img/bg_body_phones.png");
 }
 
-i{
-    padding: 5px;
+i {
+  padding: 5px;
 }
 
 nav,
+div,
+section,
 header {
   overflow: hidden;
 }
 
 header {
-    background-image: url("../assets/img/developer-guide-blog-2.png");
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-image: url("../assets/img/developer-guide-blog-2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 header div h1,
@@ -30,7 +32,7 @@ header div h1,
 }
 
 #me {
-    font-size: 45px;
+  font-size: 45px;
 }
 
 .lead {
@@ -48,66 +50,68 @@ header div h1,
   text-transform: uppercase;
 }
 
-.flexy, .flexy-skills{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+.flexy,
+.flexy-skills {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
-.img-serve{
-    flex: 25%;
+.img-serve {
+  flex: 25%;
 }
 
-.serve-describe{
-    flex: 75%;
+.serve-describe {
+  flex: 75%;
 }
 
-.serve-describe p{
-    margin: 5px;
+.serve-describe p {
+  margin: 5px;
 }
 
-.serve-describe p:first-child{
-    font-weight: bolder;
-    font-size: larger;
+.serve-describe p:first-child {
+  font-weight: bolder;
+  font-size: larger;
 }
 
-@media(max-width:768px){
-    .flexy, .flexy-skills{
-        flex-direction: column;
-        text-align: center;
-    }
-    .serve-describe p{
-        text-align: center;
-    }
-}
-
-.con{
-    width: 400px;
-}
-
-.carousel-item img{
-    height: 240px;
-    width: 240px;
-}
-
-.op{
-    opacity: 1;
-}
-
-.bg-new{
-    position: relative;
-    top: -120px;
-    color: darkmagenta;
-}
-
-.bg-boots{
-    position: relative;
-    top: 18px;
-}
-
-.bg-newer{
-    position: relative;
-    top: -120px;
+@media (max-width: 768px) {
+  .flexy,
+  .flexy-skills {
+    flex-direction: column;
     text-align: center;
+  }
+  .serve-describe p {
+    text-align: center;
+  }
+}
+
+.con {
+  width: 400px;
+}
+
+.carousel-item img {
+  height: 240px;
+  width: 240px;
+}
+
+.op {
+  opacity: 1;
+}
+
+.bg-new {
+  position: relative;
+  top: -120px;
+  color: darkmagenta;
+}
+
+.bg-boots {
+  position: relative;
+  top: 18px;
+}
+
+.bg-newer {
+  position: relative;
+  top: -120px;
+  text-align: center;
 }
